# cistron

./: .gitignore  README.md  SYSTEM_CONTEXT.md  app.py  package-lock.json  package.json  pyproject.toml
cistron/: __init__.py  cache.py  compartments.py  components.py  disease_models.py  disease_simulator.py  dogma.py  explainability.py  graph_ml.py  hpc_runner.py  knowledge_graph.py  lifecycle.py  optimization.py  parsers.py  pathology_metrics.py  patient_profile.py  perturbation.py  pharmacology.py  pipeline.py  plugins.py  predictive_models.py  sensitivity.py  simulation.py  statistics.py  storage.py  structures.py  topology.py  toxicology.py  vendored.py
examples/: all_phases_demo.py  clinical_benchmark.py  mapk_demo.py  phase10_demo.py  phase11_demo.py  phase12_demo.py  phase13_demo.py  phase9_demo.py  ux_translator_demo.py  visual_canvas_demo.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
tests/: test_api.py  test_bioreasoner.py  test_bridge_stoich_vendored.py  test_clinical_benchmark.py  test_docking.py  test_hillcube_engine.py  test_immuno.py  test_integrations.py  test_multisource.py  test_multisource_xai.py  test_omics.py  test_omnipath.py  test_phase1.py  test_phase10.py  test_phase2.py  test_phase2_hardening.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase9.py  test_pipeline.py  test_prioritizer.py  test_resolver.py  test_rich_entities.py  test_scrubber.py  test_studio_ui.py  test_topology_vuln.py  test_ui_lab.py  test_ui_translator.py  test_visual_canvas.py  test_xai_scientist.py
voidsignal/: __init__.py  cache.py  compartments.py  components.py  dogma.py  (+24 more)
(+224 files in other folders)
