[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voidsignal"
version = "0.21.0"
description = "Research-grade computational biology platform — stabilized UI, encyclopedia, causal canvas"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "VOIDSIGNAL Contributors" }]
keywords = [
    "systems-biology",
    "boolean-networks",
    "mass-action",
    "ode",
    "signaling",
    "perturbation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "fastapi>=0.110",
    "httpx>=0.27",
    "aiohttp>=3.9",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
ui = ["streamlit>=1.28", "plotly>=5.18"]
api = ["fastapi>=0.110", "httpx>=0.27", "uvicorn>=0.27"]
all = ["voidsignal[dev,ui,api]"]

[project.scripts]
voidsignal-api = "voidsignal.api.__main__:main"
voidsignal-run = "voidsignal.lifecycle:main"
voidsignal-lab = "voidsignal.ui.__main__:main"
[tool.setuptools.packages.find]
include = ["voidsignal*"]

[tool.setuptools.package-data]
voidsignal = ["assets/**/*.kgml", "assets/**/*.xml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
